# MA_dynamThreader

./: .flake8  .gitignore  DockerFile  LICENSE.txt  README.md  bot_state.json  build.py  cache.json  config.json  configs.json  makefile  pyproject.toml  requirements.txt  state.json  user_config.json
dashboard/: angular.json  package-lock.json  package.json  start-ui-dev.cmd  tsconfig.json
dashboard/src/: index.html  styles.css
dashboard/src/app/: api.service.ts  app.component.css  app.component.html  app.component.ts  models.ts
data/_EMA_/AUDCAD/: 15M.csv  1D.csv  1H.csv  30M.csv  4H.csv  5M.csv  6H.csv  8H.csv
data/_EMA_/AUDCHF/: 15M.csv  1D.csv  1H.csv  30M.csv  4H.csv  5M.csv  6H.csv
data/_EMA_/AUDJPY/: 15M.csv  1D.csv  1H.csv  30M.csv  4H.csv  5M.csv  6H.csv  8H.csv
data/_EMA_/AUDNZD/: 15M.csv  1D.csv  1H.csv  30M.csv  4H.csv  5M.csv  6H.csv  8H.csv
data/_EMA_/AUDUSD/: 15M.csv  1D.csv  1H.csv  30M.csv  (+3 more)
docs/: repo-execution-map.md  repo-layout.md  strategy-manager-audit.md
runtime/: flow_state.json  supervisor_state.json
runtime/cache/: AUDCAD.json  AUDCHF.json  AUDJPY.json  AUDNZD.json  AUDUSD.json  CADCHF.json  CADJPY.json  CHFJPY.json  CHFSGD.json  EURAUD.json  EURCAD.json  EURCHF.json  EURDKK.json  EURGBP.json  EURHKD.json  EURHUF.json  EURJPY.json  EURNOK.json  EURNZD.json  EURPLN.json  EURSEK.json  EURSGD.json  EURTRY.json  EURUSD.json  EURZAR.json  GBPAUD.json  GBPCAD.json  GBPCHF.json  GBPDKK.json  GBPJPY.json  GBPNOK.json  GBPNZD.json  GBPSEK.json  GBPSGD.json  GBPUSD.json  NZDCAD.json  NZDCHF.json  NZDJPY.json  NZDSGD.json  NZDUSD.json  (+15 more)
(+509 files in other folders)
