[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movingaverage-advisor"
version = "0.1.0"
description = "Trading advisor bot for moving average strategies using MetaTrader5"
authors = [
  { name = "Lionel_Beans1111", email = "muladi.lionel@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "MetaTrader5>=5.0",
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src/main/python"]

[tool.setuptools]
package-dir = {"" = "src/main/python"}

# Optional: entry point so you can run `movingaverage-advisor` from CLI
[project.scripts]
advisor = "advisor.__main__:main"

# Optional: PyInstaller build helper (manual execution still needed)
[tool.pyinstaller]
name = "movingaverage-advisor"
console = true
